# fsdd-speech-recognition

./: LICENSE  README.md  data_preparation.py  data_train.py  load_data.py  pre_processing.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: requirements-checkpoint.txt
config/: model_config.yaml
docs/: install.md
notebooks/: TASK-A.ipynb  TASK-B-Part-1.ipynb  TASK-B-Part-2-and-C.ipynb  TASK-B-Part-2.ipynb  TASK-B.ipynb  TASK-C.ipynb  Task-A.ipynb  Untitled.ipynb  audio_data_analysis.ipynb  innatera-task-a.ipynb  innatera-task-b-Copy1.ipynb  innatera-task-b-Copy2.ipynb  innatera-task-b.ipynb  innatera-task-c.ipynb
notebooks/.ipynb_checkpoints/: innatera-task-c-checkpoint.ipynb
old_files/: Task-A.ipynb  data_train.py  load_data.py  mfcc_features.csv  random_data.py  requirements.txt
outputs/models/: float_model_weights.pth  int8_model_weights.pth  memory_constraint_model_weights.pth  model_weights.pth  task-b-part-1_weights.pth  task-b-part-2_weights.pth  task-b-part-2_weights_jit.pth  task-b-part-2_weights_no_jit.pth
src/: data_preprocessor.py  evaluate.py  model.py  power_of_two_observer.py  quantize.py  train.py  utils.py
